# vfh3d

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  README.md  TODO.md  fr_079.bt  new_college.bt  package.xml
include/vfh-rover/: Histogram.h
include/vfh_rover/: .Histogram.h.swp  .HistogramUpdate.h.swp  Histogram.h  HistogramUpdate.h  OctomapProcessing.h  Path.h  PathParams.h  PolarHistogram.h  VFHistogram.h  Vehicle.h  util.h
launch/: singleVox.launch  test.launch  test2.launch
src/: .#vfh_rover_node.cpp  .Histogram.cpp.swp  Histogram.cpp  HistogramUpdate.cpp  Histogram_BACKUP_11508.cpp  Histogram_BASE_11508.cpp  OctomapProcessing.cpp  PolarHistogram.cpp  SingleVoxTest.cpp  VFHistogram.cpp  goal_pub.py  simRover.py  util.cpp  vfh_rover_node.cpp
